[gd_scene load_steps=4 format=3 uid="uid://sxdoirrrqib8"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_mn6m2"]
[ext_resource type="Texture2D" uid="uid://mot7w6axvkvb" path="res://assets/graphics/grear-icon.svg" id="2_e6agb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kcpdt"]
radius = 270.0

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_mn6m2")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="point_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "points : "

[node name="point_value" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "654"

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="goal_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "goal point : "

[node name="goal_value" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="HSplitContainer3" type="HSplitContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="best_labe" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "your best score : "

[node name="best_value" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="HSplitContainer2" type="HSplitContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="life_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "lifes : "
horizontal_alignment = 2

[node name="life_value" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "6"

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
position = Vector2(50, -50)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_e6agb")

[node name="setting_button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/Sprite2D"]
visible = false
custom_minimum_size = Vector2(100, 100)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -256.0
offset_right = -256.0
offset_bottom = -256.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/icon_normal_color = Color(1, 0.388235, 0.603922, 1)
flat = true

[node name="TouchScreenButton" type="TouchScreenButton" parent="MarginContainer/VBoxContainer/HBoxContainer2/Sprite2D"]
shape = SubResource("CircleShape2D_kcpdt")

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Sprite2D/setting_button" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Sprite2D/TouchScreenButton" to="." method="_on_setting_button_pressed"]
